upload and download barcodes
